k8s/ingress-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: frontend-cluster-ip-service
              servicePort: 4200
          - path: /api/?(.*)
            backend:
              serviceName: backend-cluster-ip-service
              servicePort: 3000
